// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fk_index_selection_example scalarPropertiesForRelations=always bidirectionalRelations=false identifiedReferences=false entitySchema=false: dump 1`] = `
[
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class Cars {

  [PrimaryKeyProp]?: ['carBrand', 'carYear'];

  @PrimaryKey()
  carBrand!: string;

  @PrimaryKey({ columnType: 'year' })
  carYear!: unknown;

}
",
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class FashionableColors {

  [PrimaryKeyProp]?: ['year', 'color'];

  @PrimaryKey({ columnType: 'year' })
  year!: unknown;

  @PrimaryKey()
  color!: string;

}
",
  "import { Entity, Index, ManyToOne, PrimaryKey, PrimaryKeyProp, Property, Unique } from '@mikro-orm/core';
import { Cars } from './Cars';
import { FashionableColors } from './FashionableColors';

@Entity()
@Index({ name: 'favorites_idx', properties: ['fashionableColors', 'favoriteBook'] })
@Unique({ name: 'when_set_unique', properties: ['favoriteCarBrand', 'fashionableColors'] })
export class Users {

  [PrimaryKeyProp]?: 'userId';

  @PrimaryKey()
  userId!: number;

  @ManyToOne({ entity: () => Cars, nullable: true, index: 'fk_users_cars_idx' })
  favorite?: Cars;

  @Property({ nullable: true, persist: false })
  favoriteCarBrand?: string;

  @Property({ columnType: 'year', nullable: true, persist: false })
  favoriteCarYear?: unknown;

  @Property({ nullable: true, persist: false })
  favoriteColor?: string;

  @Property({ nullable: true })
  favoriteBook?: string;

  @ManyToOne({ entity: () => FashionableColors, fieldNames: ['favorite_car_year', 'favorite_color'], nullable: true, index: 'fk_users_fashionable_colors1_idx' })
  fashionableColors?: FashionableColors;

}
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=always bidirectionalRelations=false identifiedReferences=false entitySchema=true: dump 1`] = `
[
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class Cars {
  [PrimaryKeyProp]?: ['carBrand', 'carYear'];
  carBrand!: string;
  carYear!: unknown;
}

export const CarsSchema = new EntitySchema({
  class: Cars,
  properties: {
    carBrand: { primary: true, type: 'string' },
    carYear: { primary: true, type: 'unknown', columnType: 'year' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class FashionableColors {
  [PrimaryKeyProp]?: ['year', 'color'];
  year!: unknown;
  color!: string;
}

export const FashionableColorsSchema = new EntitySchema({
  class: FashionableColors,
  properties: {
    year: { primary: true, type: 'unknown', columnType: 'year' },
    color: { primary: true, type: 'string' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { Cars } from './Cars';
import { FashionableColors } from './FashionableColors';

export class Users {
  [PrimaryKeyProp]?: 'userId';
  userId!: number;
  favorite?: Cars;
  favoriteCarBrand?: string;
  favoriteCarYear?: unknown;
  favoriteColor?: string;
  favoriteBook?: string;
  fashionableColors?: FashionableColors;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  indexes: [
    { name: 'favorites_idx', properties: ['fashionableColors', 'favoriteBook'] },
  ],
  uniques: [
    {
      name: 'when_set_unique',
      properties: ['favoriteCarBrand', 'fashionableColors'],
    },
  ],
  properties: {
    userId: { primary: true, type: 'integer' },
    favorite: {
      kind: 'm:1',
      entity: () => Cars,
      nullable: true,
      index: 'fk_users_cars_idx',
    },
    favoriteCarBrand: { type: 'string', nullable: true, persist: false },
    favoriteCarYear: {
      type: 'unknown',
      columnType: 'year',
      nullable: true,
      persist: false,
    },
    favoriteColor: { type: 'string', nullable: true, persist: false },
    favoriteBook: { type: 'string', nullable: true },
    fashionableColors: {
      kind: 'm:1',
      entity: () => FashionableColors,
      fieldNames: ['favorite_car_year', 'favorite_color'],
      nullable: true,
      index: 'fk_users_fashionable_colors1_idx',
    },
  },
});
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=always bidirectionalRelations=false identifiedReferences=true entitySchema=false: dump 1`] = `
[
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class Cars {

  [PrimaryKeyProp]?: ['carBrand', 'carYear'];

  @PrimaryKey()
  carBrand!: string;

  @PrimaryKey({ columnType: 'year' })
  carYear!: unknown;

}
",
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class FashionableColors {

  [PrimaryKeyProp]?: ['year', 'color'];

  @PrimaryKey({ columnType: 'year' })
  year!: unknown;

  @PrimaryKey()
  color!: string;

}
",
  "import { Entity, Index, ManyToOne, PrimaryKey, PrimaryKeyProp, Property, type Ref, Unique } from '@mikro-orm/core';
import { Cars } from './Cars';
import { FashionableColors } from './FashionableColors';

@Entity()
@Index({ name: 'favorites_idx', properties: ['fashionableColors', 'favoriteBook'] })
@Unique({ name: 'when_set_unique', properties: ['favoriteCarBrand', 'fashionableColors'] })
export class Users {

  [PrimaryKeyProp]?: 'userId';

  @PrimaryKey()
  userId!: number;

  @ManyToOne({ entity: () => Cars, ref: true, nullable: true, index: 'fk_users_cars_idx' })
  favorite?: Ref<Cars>;

  @Property({ nullable: true, persist: false })
  favoriteCarBrand?: string;

  @Property({ columnType: 'year', nullable: true, persist: false })
  favoriteCarYear?: unknown;

  @Property({ nullable: true, persist: false })
  favoriteColor?: string;

  @Property({ nullable: true })
  favoriteBook?: string;

  @ManyToOne({ entity: () => FashionableColors, ref: true, fieldNames: ['favorite_car_year', 'favorite_color'], nullable: true, index: 'fk_users_fashionable_colors1_idx' })
  fashionableColors?: Ref<FashionableColors>;

}
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=always bidirectionalRelations=false identifiedReferences=true entitySchema=true: dump 1`] = `
[
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class Cars {
  [PrimaryKeyProp]?: ['carBrand', 'carYear'];
  carBrand!: string;
  carYear!: unknown;
}

export const CarsSchema = new EntitySchema({
  class: Cars,
  properties: {
    carBrand: { primary: true, type: 'string' },
    carYear: { primary: true, type: 'unknown', columnType: 'year' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class FashionableColors {
  [PrimaryKeyProp]?: ['year', 'color'];
  year!: unknown;
  color!: string;
}

export const FashionableColorsSchema = new EntitySchema({
  class: FashionableColors,
  properties: {
    year: { primary: true, type: 'unknown', columnType: 'year' },
    color: { primary: true, type: 'string' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { Cars } from './Cars';
import { FashionableColors } from './FashionableColors';

export class Users {
  [PrimaryKeyProp]?: 'userId';
  userId!: number;
  favorite?: Ref<Cars>;
  favoriteCarBrand?: string;
  favoriteCarYear?: unknown;
  favoriteColor?: string;
  favoriteBook?: string;
  fashionableColors?: Ref<FashionableColors>;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  indexes: [
    { name: 'favorites_idx', properties: ['fashionableColors', 'favoriteBook'] },
  ],
  uniques: [
    {
      name: 'when_set_unique',
      properties: ['favoriteCarBrand', 'fashionableColors'],
    },
  ],
  properties: {
    userId: { primary: true, type: 'integer' },
    favorite: {
      kind: 'm:1',
      entity: () => Cars,
      ref: true,
      nullable: true,
      index: 'fk_users_cars_idx',
    },
    favoriteCarBrand: { type: 'string', nullable: true, persist: false },
    favoriteCarYear: {
      type: 'unknown',
      columnType: 'year',
      nullable: true,
      persist: false,
    },
    favoriteColor: { type: 'string', nullable: true, persist: false },
    favoriteBook: { type: 'string', nullable: true },
    fashionableColors: {
      kind: 'm:1',
      entity: () => FashionableColors,
      ref: true,
      fieldNames: ['favorite_car_year', 'favorite_color'],
      nullable: true,
      index: 'fk_users_fashionable_colors1_idx',
    },
  },
});
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=always bidirectionalRelations=true identifiedReferences=false entitySchema=false: dump 1`] = `
[
  "import { Collection, Entity, OneToMany, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

@Entity()
export class Cars {

  [PrimaryKeyProp]?: ['carBrand', 'carYear'];

  @PrimaryKey()
  carBrand!: string;

  @PrimaryKey({ columnType: 'year' })
  carYear!: unknown;

  @OneToMany({ entity: () => Users, mappedBy: 'favorite' })
  usersCollection = new Collection<Users>(this);

}
",
  "import { Collection, Entity, OneToMany, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

@Entity()
export class FashionableColors {

  [PrimaryKeyProp]?: ['year', 'color'];

  @PrimaryKey({ columnType: 'year' })
  year!: unknown;

  @PrimaryKey()
  color!: string;

  @OneToMany({ entity: () => Users, mappedBy: 'fashionableColors' })
  usersCollection = new Collection<Users>(this);

}
",
  "import { Entity, Index, ManyToOne, PrimaryKey, PrimaryKeyProp, Property, Unique } from '@mikro-orm/core';
import { Cars } from './Cars';
import { FashionableColors } from './FashionableColors';

@Entity()
@Index({ name: 'favorites_idx', properties: ['fashionableColors', 'favoriteBook'] })
@Unique({ name: 'when_set_unique', properties: ['favoriteCarBrand', 'fashionableColors'] })
export class Users {

  [PrimaryKeyProp]?: 'userId';

  @PrimaryKey()
  userId!: number;

  @ManyToOne({ entity: () => Cars, nullable: true, index: 'fk_users_cars_idx' })
  favorite?: Cars;

  @Property({ nullable: true, persist: false })
  favoriteCarBrand?: string;

  @Property({ columnType: 'year', nullable: true, persist: false })
  favoriteCarYear?: unknown;

  @Property({ nullable: true, persist: false })
  favoriteColor?: string;

  @Property({ nullable: true })
  favoriteBook?: string;

  @ManyToOne({ entity: () => FashionableColors, fieldNames: ['favorite_car_year', 'favorite_color'], nullable: true, index: 'fk_users_fashionable_colors1_idx' })
  fashionableColors?: FashionableColors;

}
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=always bidirectionalRelations=true identifiedReferences=false entitySchema=true: dump 1`] = `
[
  "import { Collection, EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

export class Cars {
  [PrimaryKeyProp]?: ['carBrand', 'carYear'];
  carBrand!: string;
  carYear!: unknown;
  usersCollection = new Collection<Users>(this);
}

export const CarsSchema = new EntitySchema({
  class: Cars,
  properties: {
    carBrand: { primary: true, type: 'string' },
    carYear: { primary: true, type: 'unknown', columnType: 'year' },
    usersCollection: { kind: '1:m', entity: () => Users, mappedBy: 'favorite' },
  },
});
",
  "import { Collection, EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

export class FashionableColors {
  [PrimaryKeyProp]?: ['year', 'color'];
  year!: unknown;
  color!: string;
  usersCollection = new Collection<Users>(this);
}

export const FashionableColorsSchema = new EntitySchema({
  class: FashionableColors,
  properties: {
    year: { primary: true, type: 'unknown', columnType: 'year' },
    color: { primary: true, type: 'string' },
    usersCollection: {
      kind: '1:m',
      entity: () => Users,
      mappedBy: 'fashionableColors',
    },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { Cars } from './Cars';
import { FashionableColors } from './FashionableColors';

export class Users {
  [PrimaryKeyProp]?: 'userId';
  userId!: number;
  favorite?: Cars;
  favoriteCarBrand?: string;
  favoriteCarYear?: unknown;
  favoriteColor?: string;
  favoriteBook?: string;
  fashionableColors?: FashionableColors;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  indexes: [
    { name: 'favorites_idx', properties: ['fashionableColors', 'favoriteBook'] },
  ],
  uniques: [
    {
      name: 'when_set_unique',
      properties: ['favoriteCarBrand', 'fashionableColors'],
    },
  ],
  properties: {
    userId: { primary: true, type: 'integer' },
    favorite: {
      kind: 'm:1',
      entity: () => Cars,
      nullable: true,
      index: 'fk_users_cars_idx',
    },
    favoriteCarBrand: { type: 'string', nullable: true, persist: false },
    favoriteCarYear: {
      type: 'unknown',
      columnType: 'year',
      nullable: true,
      persist: false,
    },
    favoriteColor: { type: 'string', nullable: true, persist: false },
    favoriteBook: { type: 'string', nullable: true },
    fashionableColors: {
      kind: 'm:1',
      entity: () => FashionableColors,
      fieldNames: ['favorite_car_year', 'favorite_color'],
      nullable: true,
      index: 'fk_users_fashionable_colors1_idx',
    },
  },
});
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=always bidirectionalRelations=true identifiedReferences=true entitySchema=false: dump 1`] = `
[
  "import { Collection, Entity, OneToMany, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

@Entity()
export class Cars {

  [PrimaryKeyProp]?: ['carBrand', 'carYear'];

  @PrimaryKey()
  carBrand!: string;

  @PrimaryKey({ columnType: 'year' })
  carYear!: unknown;

  @OneToMany({ entity: () => Users, mappedBy: 'favorite' })
  usersCollection = new Collection<Users>(this);

}
",
  "import { Collection, Entity, OneToMany, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

@Entity()
export class FashionableColors {

  [PrimaryKeyProp]?: ['year', 'color'];

  @PrimaryKey({ columnType: 'year' })
  year!: unknown;

  @PrimaryKey()
  color!: string;

  @OneToMany({ entity: () => Users, mappedBy: 'fashionableColors' })
  usersCollection = new Collection<Users>(this);

}
",
  "import { Entity, Index, ManyToOne, PrimaryKey, PrimaryKeyProp, Property, type Ref, Unique } from '@mikro-orm/core';
import { Cars } from './Cars';
import { FashionableColors } from './FashionableColors';

@Entity()
@Index({ name: 'favorites_idx', properties: ['fashionableColors', 'favoriteBook'] })
@Unique({ name: 'when_set_unique', properties: ['favoriteCarBrand', 'fashionableColors'] })
export class Users {

  [PrimaryKeyProp]?: 'userId';

  @PrimaryKey()
  userId!: number;

  @ManyToOne({ entity: () => Cars, ref: true, nullable: true, index: 'fk_users_cars_idx' })
  favorite?: Ref<Cars>;

  @Property({ nullable: true, persist: false })
  favoriteCarBrand?: string;

  @Property({ columnType: 'year', nullable: true, persist: false })
  favoriteCarYear?: unknown;

  @Property({ nullable: true, persist: false })
  favoriteColor?: string;

  @Property({ nullable: true })
  favoriteBook?: string;

  @ManyToOne({ entity: () => FashionableColors, ref: true, fieldNames: ['favorite_car_year', 'favorite_color'], nullable: true, index: 'fk_users_fashionable_colors1_idx' })
  fashionableColors?: Ref<FashionableColors>;

}
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=always bidirectionalRelations=true identifiedReferences=true entitySchema=true: dump 1`] = `
[
  "import { Collection, EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

export class Cars {
  [PrimaryKeyProp]?: ['carBrand', 'carYear'];
  carBrand!: string;
  carYear!: unknown;
  usersCollection = new Collection<Users>(this);
}

export const CarsSchema = new EntitySchema({
  class: Cars,
  properties: {
    carBrand: { primary: true, type: 'string' },
    carYear: { primary: true, type: 'unknown', columnType: 'year' },
    usersCollection: { kind: '1:m', entity: () => Users, mappedBy: 'favorite' },
  },
});
",
  "import { Collection, EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

export class FashionableColors {
  [PrimaryKeyProp]?: ['year', 'color'];
  year!: unknown;
  color!: string;
  usersCollection = new Collection<Users>(this);
}

export const FashionableColorsSchema = new EntitySchema({
  class: FashionableColors,
  properties: {
    year: { primary: true, type: 'unknown', columnType: 'year' },
    color: { primary: true, type: 'string' },
    usersCollection: {
      kind: '1:m',
      entity: () => Users,
      mappedBy: 'fashionableColors',
    },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { Cars } from './Cars';
import { FashionableColors } from './FashionableColors';

export class Users {
  [PrimaryKeyProp]?: 'userId';
  userId!: number;
  favorite?: Ref<Cars>;
  favoriteCarBrand?: string;
  favoriteCarYear?: unknown;
  favoriteColor?: string;
  favoriteBook?: string;
  fashionableColors?: Ref<FashionableColors>;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  indexes: [
    { name: 'favorites_idx', properties: ['fashionableColors', 'favoriteBook'] },
  ],
  uniques: [
    {
      name: 'when_set_unique',
      properties: ['favoriteCarBrand', 'fashionableColors'],
    },
  ],
  properties: {
    userId: { primary: true, type: 'integer' },
    favorite: {
      kind: 'm:1',
      entity: () => Cars,
      ref: true,
      nullable: true,
      index: 'fk_users_cars_idx',
    },
    favoriteCarBrand: { type: 'string', nullable: true, persist: false },
    favoriteCarYear: {
      type: 'unknown',
      columnType: 'year',
      nullable: true,
      persist: false,
    },
    favoriteColor: { type: 'string', nullable: true, persist: false },
    favoriteBook: { type: 'string', nullable: true },
    fashionableColors: {
      kind: 'm:1',
      entity: () => FashionableColors,
      ref: true,
      fieldNames: ['favorite_car_year', 'favorite_color'],
      nullable: true,
      index: 'fk_users_fashionable_colors1_idx',
    },
  },
});
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=never bidirectionalRelations=false identifiedReferences=false entitySchema=false: dump 1`] = `
[
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class Cars {

  [PrimaryKeyProp]?: ['carBrand', 'carYear'];

  @PrimaryKey()
  carBrand!: string;

  @PrimaryKey({ columnType: 'year' })
  carYear!: unknown;

}
",
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class FashionableColors {

  [PrimaryKeyProp]?: ['year', 'color'];

  @PrimaryKey({ columnType: 'year' })
  year!: unknown;

  @PrimaryKey()
  color!: string;

}
",
  "import { Entity, Index, ManyToOne, PrimaryKey, PrimaryKeyProp, Property, Unique } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

@Entity()
@Index({ name: 'favorites_idx', expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)' })
@Unique({ name: 'when_set_unique', expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)' })
export class Users {

  [PrimaryKeyProp]?: 'userId';

  @PrimaryKey()
  userId!: number;

  @Index({ name: 'fk_users_fashionable_colors1_idx' })
  @ManyToOne({ entity: () => FashionableColors, fieldNames: ['favorite_car_year', 'favorite_color'], nullable: true, index: 'fk_users_cars_idx' })
  favorite?: FashionableColors;

  @Property({ nullable: true })
  favoriteBook?: string;

}
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=never bidirectionalRelations=false identifiedReferences=false entitySchema=true: dump 1`] = `
[
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class Cars {
  [PrimaryKeyProp]?: ['carBrand', 'carYear'];
  carBrand!: string;
  carYear!: unknown;
}

export const CarsSchema = new EntitySchema({
  class: Cars,
  properties: {
    carBrand: { primary: true, type: 'string' },
    carYear: { primary: true, type: 'unknown', columnType: 'year' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class FashionableColors {
  [PrimaryKeyProp]?: ['year', 'color'];
  year!: unknown;
  color!: string;
}

export const FashionableColorsSchema = new EntitySchema({
  class: FashionableColors,
  properties: {
    year: { primary: true, type: 'unknown', columnType: 'year' },
    color: { primary: true, type: 'string' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

export class Users {
  [PrimaryKeyProp]?: 'userId';
  userId!: number;
  favorite?: FashionableColors;
  favoriteBook?: string;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  indexes: [
    {
      name: 'favorites_idx',
      expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)',
    },
    { name: 'fk_users_fashionable_colors1_idx', properties: ['favorite'] },
  ],
  uniques: [
    {
      name: 'when_set_unique',
      expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)',
    },
  ],
  properties: {
    userId: { primary: true, type: 'integer' },
    favorite: {
      kind: 'm:1',
      entity: () => FashionableColors,
      fieldNames: ['favorite_car_year', 'favorite_color'],
      nullable: true,
      index: 'fk_users_cars_idx',
    },
    favoriteBook: { type: 'string', nullable: true },
  },
});
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=never bidirectionalRelations=false identifiedReferences=true entitySchema=false: dump 1`] = `
[
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class Cars {

  [PrimaryKeyProp]?: ['carBrand', 'carYear'];

  @PrimaryKey()
  carBrand!: string;

  @PrimaryKey({ columnType: 'year' })
  carYear!: unknown;

}
",
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class FashionableColors {

  [PrimaryKeyProp]?: ['year', 'color'];

  @PrimaryKey({ columnType: 'year' })
  year!: unknown;

  @PrimaryKey()
  color!: string;

}
",
  "import { Entity, Index, ManyToOne, PrimaryKey, PrimaryKeyProp, Property, type Ref, Unique } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

@Entity()
@Index({ name: 'favorites_idx', expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)' })
@Unique({ name: 'when_set_unique', expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)' })
export class Users {

  [PrimaryKeyProp]?: 'userId';

  @PrimaryKey()
  userId!: number;

  @Index({ name: 'fk_users_fashionable_colors1_idx' })
  @ManyToOne({ entity: () => FashionableColors, ref: true, fieldNames: ['favorite_car_year', 'favorite_color'], nullable: true, index: 'fk_users_cars_idx' })
  favorite?: Ref<FashionableColors>;

  @Property({ nullable: true })
  favoriteBook?: string;

}
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=never bidirectionalRelations=false identifiedReferences=true entitySchema=true: dump 1`] = `
[
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class Cars {
  [PrimaryKeyProp]?: ['carBrand', 'carYear'];
  carBrand!: string;
  carYear!: unknown;
}

export const CarsSchema = new EntitySchema({
  class: Cars,
  properties: {
    carBrand: { primary: true, type: 'string' },
    carYear: { primary: true, type: 'unknown', columnType: 'year' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class FashionableColors {
  [PrimaryKeyProp]?: ['year', 'color'];
  year!: unknown;
  color!: string;
}

export const FashionableColorsSchema = new EntitySchema({
  class: FashionableColors,
  properties: {
    year: { primary: true, type: 'unknown', columnType: 'year' },
    color: { primary: true, type: 'string' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

export class Users {
  [PrimaryKeyProp]?: 'userId';
  userId!: number;
  favorite?: Ref<FashionableColors>;
  favoriteBook?: string;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  indexes: [
    {
      name: 'favorites_idx',
      expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)',
    },
    { name: 'fk_users_fashionable_colors1_idx', properties: ['favorite'] },
  ],
  uniques: [
    {
      name: 'when_set_unique',
      expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)',
    },
  ],
  properties: {
    userId: { primary: true, type: 'integer' },
    favorite: {
      kind: 'm:1',
      entity: () => FashionableColors,
      ref: true,
      fieldNames: ['favorite_car_year', 'favorite_color'],
      nullable: true,
      index: 'fk_users_cars_idx',
    },
    favoriteBook: { type: 'string', nullable: true },
  },
});
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=never bidirectionalRelations=true identifiedReferences=false entitySchema=false: dump 1`] = `
[
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class Cars {

  [PrimaryKeyProp]?: ['carBrand', 'carYear'];

  @PrimaryKey()
  carBrand!: string;

  @PrimaryKey({ columnType: 'year' })
  carYear!: unknown;

}
",
  "import { Collection, Entity, OneToMany, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

@Entity()
export class FashionableColors {

  [PrimaryKeyProp]?: ['year', 'color'];

  @PrimaryKey({ columnType: 'year' })
  year!: unknown;

  @PrimaryKey()
  color!: string;

  @OneToMany({ entity: () => Users, mappedBy: 'favorite' })
  usersCollection = new Collection<Users>(this);

}
",
  "import { Entity, Index, ManyToOne, PrimaryKey, PrimaryKeyProp, Property, Unique } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

@Entity()
@Index({ name: 'favorites_idx', expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)' })
@Unique({ name: 'when_set_unique', expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)' })
export class Users {

  [PrimaryKeyProp]?: 'userId';

  @PrimaryKey()
  userId!: number;

  @Index({ name: 'fk_users_fashionable_colors1_idx' })
  @ManyToOne({ entity: () => FashionableColors, fieldNames: ['favorite_car_year', 'favorite_color'], nullable: true, index: 'fk_users_cars_idx' })
  favorite?: FashionableColors;

  @Property({ nullable: true })
  favoriteBook?: string;

}
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=never bidirectionalRelations=true identifiedReferences=false entitySchema=true: dump 1`] = `
[
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class Cars {
  [PrimaryKeyProp]?: ['carBrand', 'carYear'];
  carBrand!: string;
  carYear!: unknown;
}

export const CarsSchema = new EntitySchema({
  class: Cars,
  properties: {
    carBrand: { primary: true, type: 'string' },
    carYear: { primary: true, type: 'unknown', columnType: 'year' },
  },
});
",
  "import { Collection, EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

export class FashionableColors {
  [PrimaryKeyProp]?: ['year', 'color'];
  year!: unknown;
  color!: string;
  usersCollection = new Collection<Users>(this);
}

export const FashionableColorsSchema = new EntitySchema({
  class: FashionableColors,
  properties: {
    year: { primary: true, type: 'unknown', columnType: 'year' },
    color: { primary: true, type: 'string' },
    usersCollection: { kind: '1:m', entity: () => Users, mappedBy: 'favorite' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

export class Users {
  [PrimaryKeyProp]?: 'userId';
  userId!: number;
  favorite?: FashionableColors;
  favoriteBook?: string;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  indexes: [
    {
      name: 'favorites_idx',
      expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)',
    },
    { name: 'fk_users_fashionable_colors1_idx', properties: ['favorite'] },
  ],
  uniques: [
    {
      name: 'when_set_unique',
      expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)',
    },
  ],
  properties: {
    userId: { primary: true, type: 'integer' },
    favorite: {
      kind: 'm:1',
      entity: () => FashionableColors,
      fieldNames: ['favorite_car_year', 'favorite_color'],
      nullable: true,
      index: 'fk_users_cars_idx',
    },
    favoriteBook: { type: 'string', nullable: true },
  },
});
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=never bidirectionalRelations=true identifiedReferences=true entitySchema=false: dump 1`] = `
[
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class Cars {

  [PrimaryKeyProp]?: ['carBrand', 'carYear'];

  @PrimaryKey()
  carBrand!: string;

  @PrimaryKey({ columnType: 'year' })
  carYear!: unknown;

}
",
  "import { Collection, Entity, OneToMany, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

@Entity()
export class FashionableColors {

  [PrimaryKeyProp]?: ['year', 'color'];

  @PrimaryKey({ columnType: 'year' })
  year!: unknown;

  @PrimaryKey()
  color!: string;

  @OneToMany({ entity: () => Users, mappedBy: 'favorite' })
  usersCollection = new Collection<Users>(this);

}
",
  "import { Entity, Index, ManyToOne, PrimaryKey, PrimaryKeyProp, Property, type Ref, Unique } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

@Entity()
@Index({ name: 'favorites_idx', expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)' })
@Unique({ name: 'when_set_unique', expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)' })
export class Users {

  [PrimaryKeyProp]?: 'userId';

  @PrimaryKey()
  userId!: number;

  @Index({ name: 'fk_users_fashionable_colors1_idx' })
  @ManyToOne({ entity: () => FashionableColors, ref: true, fieldNames: ['favorite_car_year', 'favorite_color'], nullable: true, index: 'fk_users_cars_idx' })
  favorite?: Ref<FashionableColors>;

  @Property({ nullable: true })
  favoriteBook?: string;

}
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=never bidirectionalRelations=true identifiedReferences=true entitySchema=true: dump 1`] = `
[
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class Cars {
  [PrimaryKeyProp]?: ['carBrand', 'carYear'];
  carBrand!: string;
  carYear!: unknown;
}

export const CarsSchema = new EntitySchema({
  class: Cars,
  properties: {
    carBrand: { primary: true, type: 'string' },
    carYear: { primary: true, type: 'unknown', columnType: 'year' },
  },
});
",
  "import { Collection, EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

export class FashionableColors {
  [PrimaryKeyProp]?: ['year', 'color'];
  year!: unknown;
  color!: string;
  usersCollection = new Collection<Users>(this);
}

export const FashionableColorsSchema = new EntitySchema({
  class: FashionableColors,
  properties: {
    year: { primary: true, type: 'unknown', columnType: 'year' },
    color: { primary: true, type: 'string' },
    usersCollection: { kind: '1:m', entity: () => Users, mappedBy: 'favorite' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

export class Users {
  [PrimaryKeyProp]?: 'userId';
  userId!: number;
  favorite?: Ref<FashionableColors>;
  favoriteBook?: string;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  indexes: [
    {
      name: 'favorites_idx',
      expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)',
    },
    { name: 'fk_users_fashionable_colors1_idx', properties: ['favorite'] },
  ],
  uniques: [
    {
      name: 'when_set_unique',
      expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)',
    },
  ],
  properties: {
    userId: { primary: true, type: 'integer' },
    favorite: {
      kind: 'm:1',
      entity: () => FashionableColors,
      ref: true,
      fieldNames: ['favorite_car_year', 'favorite_color'],
      nullable: true,
      index: 'fk_users_cars_idx',
    },
    favoriteBook: { type: 'string', nullable: true },
  },
});
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=smart bidirectionalRelations=false identifiedReferences=false entitySchema=false: dump 1`] = `
[
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class Cars {

  [PrimaryKeyProp]?: ['carBrand', 'carYear'];

  @PrimaryKey()
  carBrand!: string;

  @PrimaryKey({ columnType: 'year' })
  carYear!: unknown;

}
",
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class FashionableColors {

  [PrimaryKeyProp]?: ['year', 'color'];

  @PrimaryKey({ columnType: 'year' })
  year!: unknown;

  @PrimaryKey()
  color!: string;

}
",
  "import { Entity, Index, ManyToOne, PrimaryKey, PrimaryKeyProp, Property, Unique } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

@Entity()
@Index({ name: 'favorites_idx', expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)' })
@Unique({ name: 'when_set_unique', expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)' })
export class Users {

  [PrimaryKeyProp]?: 'userId';

  @PrimaryKey()
  userId!: number;

  @Index({ name: 'fk_users_fashionable_colors1_idx' })
  @ManyToOne({ entity: () => FashionableColors, fieldNames: ['favorite_car_year', 'favorite_color'], nullable: true, index: 'fk_users_cars_idx' })
  favorite?: FashionableColors;

  @Property({ columnType: 'year', nullable: true, persist: false })
  favoriteCarYear?: unknown;

  @Property({ nullable: true })
  favoriteBook?: string;

}
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=smart bidirectionalRelations=false identifiedReferences=false entitySchema=true: dump 1`] = `
[
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class Cars {
  [PrimaryKeyProp]?: ['carBrand', 'carYear'];
  carBrand!: string;
  carYear!: unknown;
}

export const CarsSchema = new EntitySchema({
  class: Cars,
  properties: {
    carBrand: { primary: true, type: 'string' },
    carYear: { primary: true, type: 'unknown', columnType: 'year' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class FashionableColors {
  [PrimaryKeyProp]?: ['year', 'color'];
  year!: unknown;
  color!: string;
}

export const FashionableColorsSchema = new EntitySchema({
  class: FashionableColors,
  properties: {
    year: { primary: true, type: 'unknown', columnType: 'year' },
    color: { primary: true, type: 'string' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

export class Users {
  [PrimaryKeyProp]?: 'userId';
  userId!: number;
  favorite?: FashionableColors;
  favoriteCarYear?: unknown;
  favoriteBook?: string;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  indexes: [
    {
      name: 'favorites_idx',
      expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)',
    },
    { name: 'fk_users_fashionable_colors1_idx', properties: ['favorite'] },
  ],
  uniques: [
    {
      name: 'when_set_unique',
      expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)',
    },
  ],
  properties: {
    userId: { primary: true, type: 'integer' },
    favorite: {
      kind: 'm:1',
      entity: () => FashionableColors,
      fieldNames: ['favorite_car_year', 'favorite_color'],
      nullable: true,
      index: 'fk_users_cars_idx',
    },
    favoriteCarYear: {
      type: 'unknown',
      columnType: 'year',
      nullable: true,
      persist: false,
    },
    favoriteBook: { type: 'string', nullable: true },
  },
});
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=smart bidirectionalRelations=false identifiedReferences=true entitySchema=false: dump 1`] = `
[
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class Cars {

  [PrimaryKeyProp]?: ['carBrand', 'carYear'];

  @PrimaryKey()
  carBrand!: string;

  @PrimaryKey({ columnType: 'year' })
  carYear!: unknown;

}
",
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class FashionableColors {

  [PrimaryKeyProp]?: ['year', 'color'];

  @PrimaryKey({ columnType: 'year' })
  year!: unknown;

  @PrimaryKey()
  color!: string;

}
",
  "import { Entity, Index, ManyToOne, PrimaryKey, PrimaryKeyProp, Property, type Ref, Unique } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

@Entity()
@Index({ name: 'favorites_idx', expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)' })
@Unique({ name: 'when_set_unique', expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)' })
export class Users {

  [PrimaryKeyProp]?: 'userId';

  @PrimaryKey()
  userId!: number;

  @Index({ name: 'fk_users_fashionable_colors1_idx' })
  @ManyToOne({ entity: () => FashionableColors, ref: true, fieldNames: ['favorite_car_year', 'favorite_color'], nullable: true, index: 'fk_users_cars_idx' })
  favorite?: Ref<FashionableColors>;

  @Property({ columnType: 'year', nullable: true, persist: false })
  favoriteCarYear?: unknown;

  @Property({ nullable: true })
  favoriteBook?: string;

}
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=smart bidirectionalRelations=false identifiedReferences=true entitySchema=true: dump 1`] = `
[
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class Cars {
  [PrimaryKeyProp]?: ['carBrand', 'carYear'];
  carBrand!: string;
  carYear!: unknown;
}

export const CarsSchema = new EntitySchema({
  class: Cars,
  properties: {
    carBrand: { primary: true, type: 'string' },
    carYear: { primary: true, type: 'unknown', columnType: 'year' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class FashionableColors {
  [PrimaryKeyProp]?: ['year', 'color'];
  year!: unknown;
  color!: string;
}

export const FashionableColorsSchema = new EntitySchema({
  class: FashionableColors,
  properties: {
    year: { primary: true, type: 'unknown', columnType: 'year' },
    color: { primary: true, type: 'string' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

export class Users {
  [PrimaryKeyProp]?: 'userId';
  userId!: number;
  favorite?: Ref<FashionableColors>;
  favoriteCarYear?: unknown;
  favoriteBook?: string;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  indexes: [
    {
      name: 'favorites_idx',
      expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)',
    },
    { name: 'fk_users_fashionable_colors1_idx', properties: ['favorite'] },
  ],
  uniques: [
    {
      name: 'when_set_unique',
      expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)',
    },
  ],
  properties: {
    userId: { primary: true, type: 'integer' },
    favorite: {
      kind: 'm:1',
      entity: () => FashionableColors,
      ref: true,
      fieldNames: ['favorite_car_year', 'favorite_color'],
      nullable: true,
      index: 'fk_users_cars_idx',
    },
    favoriteCarYear: {
      type: 'unknown',
      columnType: 'year',
      nullable: true,
      persist: false,
    },
    favoriteBook: { type: 'string', nullable: true },
  },
});
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=smart bidirectionalRelations=true identifiedReferences=false entitySchema=false: dump 1`] = `
[
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class Cars {

  [PrimaryKeyProp]?: ['carBrand', 'carYear'];

  @PrimaryKey()
  carBrand!: string;

  @PrimaryKey({ columnType: 'year' })
  carYear!: unknown;

}
",
  "import { Collection, Entity, OneToMany, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

@Entity()
export class FashionableColors {

  [PrimaryKeyProp]?: ['year', 'color'];

  @PrimaryKey({ columnType: 'year' })
  year!: unknown;

  @PrimaryKey()
  color!: string;

  @OneToMany({ entity: () => Users, mappedBy: 'favorite' })
  usersCollection = new Collection<Users>(this);

}
",
  "import { Entity, Index, ManyToOne, PrimaryKey, PrimaryKeyProp, Property, Unique } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

@Entity()
@Index({ name: 'favorites_idx', expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)' })
@Unique({ name: 'when_set_unique', expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)' })
export class Users {

  [PrimaryKeyProp]?: 'userId';

  @PrimaryKey()
  userId!: number;

  @Index({ name: 'fk_users_fashionable_colors1_idx' })
  @ManyToOne({ entity: () => FashionableColors, fieldNames: ['favorite_car_year', 'favorite_color'], nullable: true, index: 'fk_users_cars_idx' })
  favorite?: FashionableColors;

  @Property({ columnType: 'year', nullable: true, persist: false })
  favoriteCarYear?: unknown;

  @Property({ nullable: true })
  favoriteBook?: string;

}
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=smart bidirectionalRelations=true identifiedReferences=false entitySchema=true: dump 1`] = `
[
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class Cars {
  [PrimaryKeyProp]?: ['carBrand', 'carYear'];
  carBrand!: string;
  carYear!: unknown;
}

export const CarsSchema = new EntitySchema({
  class: Cars,
  properties: {
    carBrand: { primary: true, type: 'string' },
    carYear: { primary: true, type: 'unknown', columnType: 'year' },
  },
});
",
  "import { Collection, EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

export class FashionableColors {
  [PrimaryKeyProp]?: ['year', 'color'];
  year!: unknown;
  color!: string;
  usersCollection = new Collection<Users>(this);
}

export const FashionableColorsSchema = new EntitySchema({
  class: FashionableColors,
  properties: {
    year: { primary: true, type: 'unknown', columnType: 'year' },
    color: { primary: true, type: 'string' },
    usersCollection: { kind: '1:m', entity: () => Users, mappedBy: 'favorite' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

export class Users {
  [PrimaryKeyProp]?: 'userId';
  userId!: number;
  favorite?: FashionableColors;
  favoriteCarYear?: unknown;
  favoriteBook?: string;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  indexes: [
    {
      name: 'favorites_idx',
      expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)',
    },
    { name: 'fk_users_fashionable_colors1_idx', properties: ['favorite'] },
  ],
  uniques: [
    {
      name: 'when_set_unique',
      expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)',
    },
  ],
  properties: {
    userId: { primary: true, type: 'integer' },
    favorite: {
      kind: 'm:1',
      entity: () => FashionableColors,
      fieldNames: ['favorite_car_year', 'favorite_color'],
      nullable: true,
      index: 'fk_users_cars_idx',
    },
    favoriteCarYear: {
      type: 'unknown',
      columnType: 'year',
      nullable: true,
      persist: false,
    },
    favoriteBook: { type: 'string', nullable: true },
  },
});
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=smart bidirectionalRelations=true identifiedReferences=true entitySchema=false: dump 1`] = `
[
  "import { Entity, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';

@Entity()
export class Cars {

  [PrimaryKeyProp]?: ['carBrand', 'carYear'];

  @PrimaryKey()
  carBrand!: string;

  @PrimaryKey({ columnType: 'year' })
  carYear!: unknown;

}
",
  "import { Collection, Entity, OneToMany, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

@Entity()
export class FashionableColors {

  [PrimaryKeyProp]?: ['year', 'color'];

  @PrimaryKey({ columnType: 'year' })
  year!: unknown;

  @PrimaryKey()
  color!: string;

  @OneToMany({ entity: () => Users, mappedBy: 'favorite' })
  usersCollection = new Collection<Users>(this);

}
",
  "import { Entity, Index, ManyToOne, PrimaryKey, PrimaryKeyProp, Property, type Ref, Unique } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

@Entity()
@Index({ name: 'favorites_idx', expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)' })
@Unique({ name: 'when_set_unique', expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)' })
export class Users {

  [PrimaryKeyProp]?: 'userId';

  @PrimaryKey()
  userId!: number;

  @Index({ name: 'fk_users_fashionable_colors1_idx' })
  @ManyToOne({ entity: () => FashionableColors, ref: true, fieldNames: ['favorite_car_year', 'favorite_color'], nullable: true, index: 'fk_users_cars_idx' })
  favorite?: Ref<FashionableColors>;

  @Property({ columnType: 'year', nullable: true, persist: false })
  favoriteCarYear?: unknown;

  @Property({ nullable: true })
  favoriteBook?: string;

}
",
]
`;

exports[`fk_index_selection_example scalarPropertiesForRelations=smart bidirectionalRelations=true identifiedReferences=true entitySchema=true: dump 1`] = `
[
  "import { EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';

export class Cars {
  [PrimaryKeyProp]?: ['carBrand', 'carYear'];
  carBrand!: string;
  carYear!: unknown;
}

export const CarsSchema = new EntitySchema({
  class: Cars,
  properties: {
    carBrand: { primary: true, type: 'string' },
    carYear: { primary: true, type: 'unknown', columnType: 'year' },
  },
});
",
  "import { Collection, EntitySchema, PrimaryKeyProp } from '@mikro-orm/core';
import { Users } from './Users';

export class FashionableColors {
  [PrimaryKeyProp]?: ['year', 'color'];
  year!: unknown;
  color!: string;
  usersCollection = new Collection<Users>(this);
}

export const FashionableColorsSchema = new EntitySchema({
  class: FashionableColors,
  properties: {
    year: { primary: true, type: 'unknown', columnType: 'year' },
    color: { primary: true, type: 'string' },
    usersCollection: { kind: '1:m', entity: () => Users, mappedBy: 'favorite' },
  },
});
",
  "import { EntitySchema, PrimaryKeyProp, type Ref } from '@mikro-orm/core';
import { FashionableColors } from './FashionableColors';

export class Users {
  [PrimaryKeyProp]?: 'userId';
  userId!: number;
  favorite?: Ref<FashionableColors>;
  favoriteCarYear?: unknown;
  favoriteBook?: string;
}

export const UsersSchema = new EntitySchema({
  class: Users,
  indexes: [
    {
      name: 'favorites_idx',
      expression: 'alter table \`users\` add index \`favorites_idx\` (\`favorite_car_year\`, \`favorite_color\`, \`favorite_book\`)',
    },
    { name: 'fk_users_fashionable_colors1_idx', properties: ['favorite'] },
  ],
  uniques: [
    {
      name: 'when_set_unique',
      expression: 'alter table \`users\` add unique \`when_set_unique\` (\`favorite_car_brand\`, \`favorite_car_year\`, \`favorite_color\`)',
    },
  ],
  properties: {
    userId: { primary: true, type: 'integer' },
    favorite: {
      kind: 'm:1',
      entity: () => FashionableColors,
      ref: true,
      fieldNames: ['favorite_car_year', 'favorite_color'],
      nullable: true,
      index: 'fk_users_cars_idx',
    },
    favoriteCarYear: {
      type: 'unknown',
      columnType: 'year',
      nullable: true,
      persist: false,
    },
    favoriteBook: { type: 'string', nullable: true },
  },
});
",
]
`;
